2000-08-29  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* scheduler/mq2auth.c:
	    Copy addresses into separate range buffers for
	    masking and comparison.  (Generalized the function).

	* scheduler/msgerror.c:
	    Construct the report message somewhat differently

	* scheduler/udpate.c:
	    Do certain diagnostics only when  (verbose)  flag is set.

	* transports/smtp/getmxrr.c, transports/smtp/smtp.c:
	    Remove more old debug statements, make sure that
	    lack of memory from  getaddrinfo() is handled
	    properly (e.g. exit(EX_OSERR) -- not best, but..)

2000-08-23  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>

	* smtpserver/mailq.c:
	    Use  getaddrinfo()  to pick the peer address.

	* include/listutils.h:
	    Incorrect ANSI-C pre-processor string concatenation directive use.

	* libc/myhostname.c:
	    Pick any of my possible addresses, don't specify port.
	    (We are looking for CANONIC NAME, after all..)

	* smtpserver/smtpdata.c:
	    Pipelined BDAT after failed MAIL FROM segfaulted
	    on one unprotected SS->mfp referral.  Oops.

2000-08-21  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* libc/getaddrinfo.c:
	    Complete IPv4/IPv6 functionality with proper
	    timeout error handling, and malloc()ed memory
	    garbage collection.  This supplies the function
	    for   --with-ipv6-replacement-libc   cfg option.
	    (Necessary at all systems with GNU LIBC versions
	     up to 2.2.)

2000-08-19  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* proto/newdbprocessor.in:
	    Process the owner/group/mode triplet too.

2000-08-18  Ambrose Li <acli@ada.dhs.org>

	* configure.in, acconfig.h, scheduler/transport.c,
	  transports/smtp/getmxrr.c:
	    Linux 2.2.* with libc5 fixes.

2000-08-17  Matti Aarnio  <mea@aarnima1-pc1.tmt.tele.fi>

	* smtpserver/policytest.c, router/libdb/bsdhash.c,
	  router/libdb/bsdbtree.c, utils/makedb/makedb.c,
	  utils/vacation/vacation.c:
	    RedHat 6.0 BSD DB surprised somewhat... Fixes for