@@ -1,3 +1,9 @@
+2000-08-30  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
+
+	* libc/getaddrinfo.c:
+	    At Solaris the  uname(2)  call return NON NEGATIVE
+	    value on success, not necessarily ZERO as in Linux...
+
 2000-08-29  Matti Aarnio  <mea@aarnima1-pc1.icpd.sonera.fi>
 
 	* scheduler/mq2auth.c:
